# wrtkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCS_SUMMARY.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SERIAL_CONNECTION.md  SUMMARY.md  TROUBLESHOOTING.md  debug_remote_parsing.py  demo_list_fix.py  mkdocs.yml  pyproject.toml  test_colors.py  test_common_demo.py  test_list_diff.py  test_list_diff_detailed.py  test_list_order.py  test_real_ssh.py  test_uci_show_format.py  test_your_scenario.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  publish.yml
docs/: SERIAL_CONNECTION.md  TROUBLESHOOTING.md  index.md  quickstart-yaml.md  yaml-json-guide.md
docs/api/: base.md  config.md  dhcp.md  firewall.md  fleet.md  network.md  ssh.md  wireless.md
docs/development/: contributing.md  publishing.md  testing.md
docs/examples/: advanced-firewall.md  basic-router.md  mesh-network.md  multiple-aps.md
docs/getting-started/: first-config.md  installation.md  quick-start.md
docs/guide/: cli.md  config-management.md  dhcp.md  firewall.md  fleet.md  network.md  ssh.md  testing.md  wireless.md
examples/: README.md  VLAN_YAML_GUIDE.md  complete-router-config.yaml  config-office-branch1.yaml  config-office-branch2.yaml  config-office-main.yaml  demo_whitelist_display.py  diff_comparison.md  diff_demo.py  fleet.yaml  mesh_info.py  network-interface.yaml  router-config-with-guest.yaml  router-config.json  router-config.yaml  router_config.py  serial_example.py  simple_example.py  test-config.yaml  tests.yaml  vlan_basic.yaml  vlan_bridge_filtering.yaml  vlan_example.py  vlan_inter_routing.yaml  whitelist_example.py  whitelist_real_world.yaml  wireless-ap.yaml  yaml_workflow_example.py
src/wrtkit/: __init__.py  base.py  cli.py  config.py  dhcp.py  firewall.py  fleet.py  fleet_executor.py  mesh.py  network.py  progress.py  schema.py  serial_connection.py  sqm.py  ssh.py  test_executor.py  (+2 more)
tests/: __init__.py  test_config.py  test_dhcp.py  test_firewall.py  test_network.py  test_remote_policy_whitelist.py  test_sqm.py  test_wireless.py  test_yaml_json.py  test_yaml_json_advanced.py
uci/: router.cfg
